--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ box-shadow: 7px 7px 20px #502323;
 <script>
 function go() {
     window.onbeforeunload = null;
-    window.location.href = 'https://www.otherfortheagis.live/?sl=5741455-a7d06&data1=Track1&data2=Track2&tag={External_ID_from_traffic_source}&website={subID}&placement={sub_subID}';
+    window.location.href = 'https://vobeluxa.com/cl/563c965a2dd0e26f';
 }
 </script>
 <script>
